[package]
name = "anova"
version = "0.1.0"
authors = ["Philipp Muens <raute1337@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0.118", features = ["derive"] }
sha3 = "0.9.1"
