[package]
name = "anova"
version = "0.1.0"
license = "Apache-2.0"
description = "Distributed ledger with a focus on privacy, safety and scalability."
keywords = ["dlt", "distributed ledger", "bft", "consensus", "p2p", "distributed system", "blockchain"]
categories = ["algorithms", "data-structures", "network-programming"]
documentation = "https://docs.rs/anova/"
readme = "README.md"
homepage = "https://github.com/pmuens/anova"
repository = "https://github.com/pmuens/anova"
exclude = ["examples", "scripts", "tmp"]
authors = ["Philipp Muens <raute1337@gmx.de>"]
edition = "2018"

[dependencies]
bincode = "1.3.1"
rand = "0.8.1"
serde = { version = "1.0.118", features = ["derive"] }
sha3 = "0.9.1"
